[gd_scene load_steps=4 format=3 uid="uid://m1bjccvb7anu"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_bixke"]
[ext_resource type="Texture2D" uid="uid://dupfsqy87vmdc" path="res://Assets/Space Ship.png" id="2_gd0yp"]
[ext_resource type="AudioStream" uid="uid://cx1a7elg0soe6" path="res://sounds/bullet.wav" id="3_qs50j"]

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 56
script = ExtResource("1_bixke")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_gd0yp")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2(1, 4)
rotation = 1.5708
polygon = PackedVector2Array(4, 21, 4, -27, -2, -27, -13, 21)

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 424

[node name="CollisionShape2D2" type="CollisionPolygon2D" parent="Hurtbox"]
position = Vector2(1, 4)
rotation = 1.5708
polygon = PackedVector2Array(4, 21, 4, -27, -2, -27, -13, 21)

[node name="ShootingTimer" type="Timer" parent="."]
one_shot = true

[node name="AmmoRefreshTimer" type="Timer" parent="."]
one_shot = true

[node name="Shooting Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_qs50j")

[node name="Invincibility_Timer" type="Timer" parent="."]
one_shot = true

[node name="Flickering_Timer" type="Timer" parent="."]
one_shot = true

[node name="Gun Position" type="Marker2D" parent="."]
position = Vector2(28, 4)

[node name="Sounds" type="Node2D" parent="."]
process_mode = 3

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="ShootingTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="AmmoRefreshTimer" to="." method="_on_ammo_refresh_timer_timeout"]
[connection signal="timeout" from="Invincibility_Timer" to="." method="_on_invincibility_timer_timeout"]
[connection signal="timeout" from="Flickering_Timer" to="." method="_on_flickering_timer_timeout"]
